manifests-235/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 12.1.0
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: kube-prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/grafana-config: 377685dd836fd69449f670acaad3f417
        checksum/grafana-dashboardproviders: 4c364bf7811a4eff194596a272550ae5
        checksum/grafana-datasources: 34dc6d0eeebe415ac38992ae3518ab8e
      labels:
        app.kubernetes.io/component: grafana
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 12.1.0
    spec:
      automountServiceAccountToken: false
      containers:
      - env: []
        image: grafana/grafana:12.1.0
        name: grafana
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 150m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
          readOnly: false
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: false
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
          readOnly: false
        - mountPath: /tmp
          name: tmp-plugins
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/alertmanager-overview
          name: grafana-dashboard-alertmanager-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/apiserver
          name: grafana-dashboard-apiserver
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/argo-cd-application-overview
          name: grafana-dashboard-argo-cd-application-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/argo-cd-notifications-overview
          name: grafana-dashboard-argo-cd-notifications-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/argo-cd-operational-overview
          name: grafana-dashboard-argo-cd-operational-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cert-manager-overview
          name: grafana-dashboard-cert-manager-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-L3-policy
          name: grafana-dashboard-cilium-L3-policy
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-L7-proxy
          name: grafana-dashboard-cilium-L7-proxy
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-agent-overview
          name: grafana-dashboard-cilium-agent-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-agent
          name: grafana-dashboard-cilium-agent
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-api
          name: grafana-dashboard-cilium-api
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-bpf
          name: grafana-dashboard-cilium-bpf
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-conntrack
          name: grafana-dashboard-cilium-conntrack
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-datapath
          name: grafana-dashboard-cilium-datapath
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-external-fqdn-proxy
          name: grafana-dashboard-cilium-external-fqdn-proxy
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-fqdn-proxy
          name: grafana-dashboard-cilium-fqdn-proxy
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-identities
          name: grafana-dashboard-cilium-identities
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-kubernetes
          name: grafana-dashboard-cilium-kubernetes
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-network
          name: grafana-dashboard-cilium-network
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-nodes
          name: grafana-dashboard-cilium-nodes
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-operator
          name: grafana-dashboard-cilium-operator
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-overview
          name: grafana-dashboard-cilium-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-policy
          name: grafana-dashboard-cilium-policy
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cilium-resource-utilization
          name: grafana-dashboard-cilium-resource-utilization
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cluster-total
          name: grafana-dashboard-cluster-total
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/controller-manager
          name: grafana-dashboard-controller-manager
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/coredns
          name: grafana-dashboard-coredns
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/envoy-overview
          name: grafana-dashboard-envoy-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/etcd
          name: grafana-dashboard-etcd
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/grafana-overview
          name: grafana-dashboard-grafana-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/hubble-overview
          name: grafana-dashboard-hubble-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/hubble-timescape
          name: grafana-dashboard-hubble-timescape
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-cluster
          name: grafana-dashboard-k8s-resources-cluster
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-multicluster
          name: grafana-dashboard-k8s-resources-multicluster
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-namespace
          name: grafana-dashboard-k8s-resources-namespace
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-node
          name: grafana-dashboard-k8s-resources-node
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-pod
          name: grafana-dashboard-k8s-resources-pod
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-windows-cluster
          name: grafana-dashboard-k8s-resources-windows-cluster
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-windows-namespace
          name: grafana-dashboard-k8s-resources-windows-namespace
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-windows-pod
          name: grafana-dashboard-k8s-resources-windows-pod
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workload
          name: grafana-dashboard-k8s-resources-workload
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workloads-namespace
          name: grafana-dashboard-k8s-resources-workloads-namespace
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-windows-cluster-rsrc-use
          name: grafana-dashboard-k8s-windows-cluster-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-windows-node-rsrc-use
          name: grafana-dashboard-k8s-windows-node-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/kubelet
          name: grafana-dashboard-kubelet
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/logging-elasticsearch
          name: grafana-dashboard-logging-elasticsearch
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/mysql-overview
          name: grafana-dashboard-mysql-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/namespace-by-pod
          name: grafana-dashboard-namespace-by-pod
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/namespace-by-workload
          name: grafana-dashboard-namespace-by-workload
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/node-cluster-rsrc-use
          name: grafana-dashboard-node-cluster-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/node-rsrc-use
          name: grafana-dashboard-node-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes-aix
          name: grafana-dashboard-nodes-aix
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes-darwin
          name: grafana-dashboard-nodes-darwin
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes
          name: grafana-dashboard-nodes
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/persistentvolumesusage
          name: grafana-dashboard-persistentvolumesusage
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/pod-total
          name: grafana-dashboard-pod-total
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/prometheus-remote-write
          name: grafana-dashboard-prometheus-remote-write
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/prometheus
          name: grafana-dashboard-prometheus
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/proxy
          name: grafana-dashboard-proxy
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/redis_overview
          name: grafana-dashboard-redis_overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/scheduler
          name: grafana-dashboard-scheduler
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/traefikdash
          name: grafana-dashboard-traefikdash
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/workload-total
          name: grafana-dashboard-workload-total
          readOnly: false
        - mountPath: /etc/grafana
          name: grafana-config
          readOnly: false
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: grafana
      volumes:
      - emptyDir: {}
        name: grafana-storage
      - name: grafana-datasources
        secret:
          secretName: grafana-datasources
      - configMap:
          name: grafana-dashboards
        name: grafana-dashboards
      - emptyDir:
          medium: Memory
        name: tmp-plugins
      - configMap:
          name: grafana-dashboard-alertmanager-overview
        name: grafana-dashboard-alertmanager-overview
      - configMap:
          name: grafana-dashboard-apiserver
        name: grafana-dashboard-apiserver
      - configMap:
          name: grafana-dashboard-argo-cd-application-overview
        name: grafana-dashboard-argo-cd-application-overview
      - configMap:
          name: grafana-dashboard-argo-cd-notifications-overview
        name: grafana-dashboard-argo-cd-notifications-overview
      - configMap:
          name: grafana-dashboard-argo-cd-operational-overview
        name: grafana-dashboard-argo-cd-operational-overview
      - configMap:
          name: grafana-dashboard-cert-manager-overview
        name: grafana-dashboard-cert-manager-overview
      - configMap:
          name: grafana-dashboard-cilium-L3-policy
        name: grafana-dashboard-cilium-L3-policy
      - configMap:
          name: grafana-dashboard-cilium-L7-proxy
        name: grafana-dashboard-cilium-L7-proxy
      - configMap:
          name: grafana-dashboard-cilium-agent-overview
        name: grafana-dashboard-cilium-agent-overview
      - configMap:
          name: grafana-dashboard-cilium-agent
        name: grafana-dashboard-cilium-agent
      - configMap:
          name: grafana-dashboard-cilium-api
        name: grafana-dashboard-cilium-api
      - configMap:
          name: grafana-dashboard-cilium-bpf
        name: grafana-dashboard-cilium-bpf
      - configMap:
          name: grafana-dashboard-cilium-conntrack
        name: grafana-dashboard-cilium-conntrack
      - configMap:
          name: grafana-dashboard-cilium-datapath
        name: grafana-dashboard-cilium-datapath
      - configMap:
          name: grafana-dashboard-cilium-external-fqdn-proxy
        name: grafana-dashboard-cilium-external-fqdn-proxy
      - configMap:
          name: grafana-dashboard-cilium-fqdn-proxy
        name: grafana-dashboard-cilium-fqdn-proxy
      - configMap:
          name: grafana-dashboard-cilium-identities
        name: grafana-dashboard-cilium-identities
      - configMap:
          name: grafana-dashboard-cilium-kubernetes
        name: grafana-dashboard-cilium-kubernetes
      - configMap:
          name: grafana-dashboard-cilium-network
        name: grafana-dashboard-cilium-network
      - configMap:
          name: grafana-dashboard-cilium-nodes
        name: grafana-dashboard-cilium-nodes
      - configMap:
          name: grafana-dashboard-cilium-operator
        name: grafana-dashboard-cilium-operator
      - configMap:
          name: grafana-dashboard-cilium-overview
        name: grafana-dashboard-cilium-overview
      - configMap:
          name: grafana-dashboard-cilium-policy
        name: grafana-dashboard-cilium-policy
      - configMap:
          name: grafana-dashboard-cilium-resource-utilization
        name: grafana-dashboard-cilium-resource-utilization
      - configMap:
          name: grafana-dashboard-cluster-total
        name: grafana-dashboard-cluster-total
      - configMap:
          name: grafana-dashboard-controller-manager
        name: grafana-dashboard-controller-manager
      - configMap:
          name: grafana-dashboard-coredns
        name: grafana-dashboard-coredns
      - configMap:
          name: grafana-dashboard-envoy-overview
        name: grafana-dashboard-envoy-overview
      - configMap:
          name: grafana-dashboard-etcd
        name: grafana-dashboard-etcd
      - configMap:
          name: grafana-dashboard-grafana-overview
        name: grafana-dashboard-grafana-overview
      - configMap:
          name: grafana-dashboard-hubble-overview
        name: grafana-dashboard-hubble-overview
      - configMap:
          name: grafana-dashboard-hubble-timescape
        name: grafana-dashboard-hubble-timescape
      - configMap:
          name: grafana-dashboard-k8s-resources-cluster
        name: grafana-dashboard-k8s-resources-cluster
      - configMap:
          name: grafana-dashboard-k8s-resources-multicluster
        name: grafana-dashboard-k8s-resources-multicluster
      - configMap:
          name: grafana-dashboard-k8s-resources-namespace
        name: grafana-dashboard-k8s-resources-namespace
      - configMap:
          name: grafana-dashboard-k8s-resources-node
        name: grafana-dashboard-k8s-resources-node
      - configMap:
          name: grafana-dashboard-k8s-resources-pod
        name: grafana-dashboard-k8s-resources-pod
      - configMap:
          name: grafana-dashboard-k8s-resources-windows-cluster
        name: grafana-dashboard-k8s-resources-windows-cluster
      - configMap:
          name: grafana-dashboard-k8s-resources-windows-namespace
        name: grafana-dashboard-k8s-resources-windows-namespace
      - configMap:
          name: grafana-dashboard-k8s-resources-windows-pod
        name: grafana-dashboard-k8s-resources-windows-pod
      - configMap:
          name: grafana-dashboard-k8s-resources-workload
        name: grafana-dashboard-k8s-resources-workload
      - configMap:
          name: grafana-dashboard-k8s-resources-workloads-namespace
        name: grafana-dashboard-k8s-resources-workloads-namespace
      - configMap:
          name: grafana-dashboard-k8s-windows-cluster-rsrc-use
        name: grafana-dashboard-k8s-windows-cluster-rsrc-use
      - configMap:
          name: grafana-dashboard-k8s-windows-node-rsrc-use
        name: grafana-dashboard-k8s-windows-node-rsrc-use
      - configMap:
          name: grafana-dashboard-kubelet
        name: grafana-dashboard-kubelet
      - configMap:
          name: grafana-dashboard-logging-elasticsearch
        name: grafana-dashboard-logging-elasticsearch
      - configMap:
          name: grafana-dashboard-mysql-overview
        name: grafana-dashboard-mysql-overview
      - configMap:
          name: grafana-dashboard-namespace-by-pod
        name: grafana-dashboard-namespace-by-pod
      - configMap:
          name: grafana-dashboard-namespace-by-workload
        name: grafana-dashboard-namespace-by-workload
      - configMap:
          name: grafana-dashboard-node-cluster-rsrc-use
        name: grafana-dashboard-node-cluster-rsrc-use
      - configMap:
          name: grafana-dashboard-node-rsrc-use
        name: grafana-dashboard-node-rsrc-use
      - configMap:
          name: grafana-dashboard-nodes-aix
        name: grafana-dashboard-nodes-aix
      - configMap:
          name: grafana-dashboard-nodes-darwin
        name: grafana-dashboard-nodes-darwin
      - configMap:
          name: grafana-dashboard-nodes
        name: grafana-dashboard-nodes
      - configMap:
          name: grafana-dashboard-persistentvolumesusage
        name: grafana-dashboard-persistentvolumesusage
      - configMap:
          name: grafana-dashboard-pod-total
        name: grafana-dashboard-pod-total
      - configMap:
          name: grafana-dashboard-prometheus-remote-write
        name: grafana-dashboard-prometheus-remote-write
      - configMap:
          name: grafana-dashboard-prometheus
        name: grafana-dashboard-prometheus
      - configMap:
          name: grafana-dashboard-proxy
        name: grafana-dashboard-proxy
      - configMap:
          name: grafana-dashboard-redis_overview
        name: grafana-dashboard-redis_overview
      - configMap:
          name: grafana-dashboard-scheduler
        name: grafana-dashboard-scheduler
      - configMap:
          name: grafana-dashboard-traefikdash
        name: grafana-dashboard-traefikdash
      - configMap:
          name: grafana-dashboard-workload-total
        name: grafana-dashboard-workload-total
      - name: grafana-config
        secret:
          secretName: grafana-config
