manifests-235/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: backend
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: pyrra.monitoring.235.tdude.co
    http:
      paths:
      - backend:
          service:
            name: pyrra-api
            port:
              name: http
        path: /
        pathType: Prefix
  - host: alertmanager.monitoring.235.tdude.co
    http:
      paths:
      - backend:
          service:
            name: alertmanager-main
            port:
              name: web
        path: /
        pathType: Prefix
  - host: prometheus.monitoring.235.tdude.co
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              name: web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pyrra.monitoring.235.tdude.co
    - prometheus.monitoring.235.tdude.co
    - alertmanager.monitoring.235.tdude.co
    - monitoring.235.tdude.co
    secretName: 235-tdude-co-tls
